<resources>
    <string name="app_name">Fannak</string>
    <string name="login_label">Welcome Back</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign in</string>
    <string name="new_to_fannak">New to Fannak?</string>
    <string name="set_your_language">Set your language</string>
    <string name="english">English</string>
    <string name="arabic">العربية</string>
    <string name="next">Next</string>
    <string name="continue_as_a_guest">Continue as a guest</string>
    <string name="sign_up">Sign up</string>
    <string name="sign_up_label">Create your Account</string>
    <string name="your_name">Your name</string>
    <string name="confirm_your_password">Confirm your Password</string>
    <string name="default_hint">Start typing</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="current">Current</string>
    <string name="previous">Previous</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_orders">Orders</string>
    <string name="title_more">More</string>
    <string name="fannak_logo">fannak_logo</string>
    <string name="search">search</string>
    <string name="featured">Featured</string>
    <string name="see_all">See All</string>
    <string name="handcrafts">HandCrafts</string>
    <string name="hello_appbar">Hello,</string>
    <string name="guest">Guest</string>
    <string name="arts">Arts</string>
    <string name="log_out">Log out</string>
    <string name="name_label">Your Name:</string>
    <string name="your_email">Your Email:</string>
    <string name="email_hint">example@yourdomain.com</string>
    <string name="customer_service_num">+962797936440</string>
    <string name="contact_us">Contact us</string>
    <string name="customer_service_msg">Our Customer Service Team will be delighted to assist you</string>
    <string name="call_us_at">Call us at</string>
    <string name="call">Call</string>
    <string name="follow_us">Follow us</string>
    <string name="account">Account</string>
    <string name="about_us">About us</string>
    <string name="wow_such_empty">Wow, such empty</string>
    <string name="select_product_category_type">Select Product category type</string>
    <string name="select_one_of_these_sub_categories">select one of these sub categories</string>
    <string name="order">Order</string>
    <string name="see_all_handcrafts">See All Handcrafts</string>
    <string name="see_all_arts">See All Arts</string>
    <string name="search_hint">Search...</string>
</resources>
