<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.AccountActivity">
    <include
        android:id="@+id/appbar"
        layout="@layout/appbar_simple"/>
    <TextView
        android:id="@+id/name_label"
        style="@style/LabelsTextAppearance"
        android:text="@string/name_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_top_margin"
        android:layout_marginStart="@dimen/default_horizontal_margin"
        app:layout_constraintTop_toBottomOf="@id/appbar"
        app:layout_constraintStart_toStartOf="parent"/>
    <TextView
        android:id="@+id/name_tv"
        android:fontFamily="@font/english_medium"
        android:textColor="@color/black"
        android:text="@string/guest"
        android:textSize="@dimen/_20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/default_horizontal_margin"
        android:layout_marginTop="@dimen/edittext_top_margin"
        app:layout_constraintTop_toBottomOf="@id/name_label"
        app:layout_constraintStart_toStartOf="parent"/>
    <TextView
        android:id="@+id/email_label"
        style="@style/LabelsTextAppearance"
        android:text="@string/your_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/default_horizontal_margin"
        android:layout_marginTop="@dimen/default_top_margin"
        app:layout_constraintTop_toBottomOf="@id/name_tv"
        app:layout_constraintStart_toStartOf="parent"/>
    <TextView
        android:id="@+id/email_tv"
        android:fontFamily="@font/english_medium"
        android:textColor="@color/black"
        android:textSize="@dimen/_20"
        android:text="@string/email_hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/edittext_top_margin"
        android:layout_marginStart="@dimen/default_horizontal_margin"
        app:layout_constraintTop_toBottomOf="@id/email_label"
        app:layout_constraintStart_toStartOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>