<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.LoginActivity">
    <ImageView
        android:id="@+id/fannak_logo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/fannak_logo"
        android:layout_marginTop="@dimen/layout_top_margin"
        android:layout_marginStart="@dimen/layout_start_margin"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>
    <TextView
        android:id="@+id/login_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_label"
        android:textColor="@color/black"
        android:fontFamily="@font/english_headline_semibold"
        android:textSize="@dimen/_32"
        android:layout_marginTop="16dp"
        android:layout_marginStart="@dimen/layout_start_margin"
        app:layout_constraintTop_toBottomOf="@id/fannak_logo"
        app:layout_constraintStart_toStartOf="parent"/>
    <TextView
        android:id="@+id/email_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email"
        style="@style/LabelsTextAppearance"
        android:layout_marginTop="32dp"
        android:layout_marginStart="@dimen/layout_start_margin"
        app:layout_constraintTop_toBottomOf="@id/login_label"
        app:layout_constraintStart_toStartOf="parent"/>
    <com.google.android.material.card.MaterialCardView
        android:id="@+id/email_card"
        android:layout_width="0dp"
        android:layout_height="@dimen/edittext_height"
        app:cardElevation="0dp"
        app:cardBackgroundColor="@color/card_default_color"
        app:cardCornerRadius="@dimen/card_default_radius"
        app:layout_constraintTop_toBottomOf="@id/email_tv"
        android:layout_marginHorizontal="@dimen/default_horizontal_margin"
        android:layout_marginTop="@dimen/edittext_top_margin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:strokeWidth="1.0dip">
        <EditText
            android:id="@+id/email_et"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textEmailAddress"
            android:hint="@string/default_hint"
            android:textSize="@dimen/_16"
            android:fontFamily="@font/english_regular"
            android:textColor="@color/black"
            android:textColorHint="@color/hint_text_color"
            style="@style/EditText_Theme"/>
    </com.google.android.material.card.MaterialCardView>
    <TextView
        android:id="@+id/password_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password"
        style="@style/LabelsTextAppearance"
        android:layout_marginTop="16dp"
        android:layout_marginStart="@dimen/layout_start_margin"
        app:layout_constraintTop_toBottomOf="@id/email_card"
        app:layout_constraintStart_toStartOf="parent"/>
        <com.google.android.material.card.MaterialCardView
            android:id="@+id/password_card"
            android:layout_width="0dp"
            android:layout_height="@dimen/edittext_height"
            app:cardElevation="0dp"
            app:cardBackgroundColor="@color/card_default_color"
            app:cardCornerRadius="@dimen/card_default_radius"
            android:layout_marginTop="@dimen/edittext_top_margin"
            android:layout_marginHorizontal="@dimen/default_horizontal_margin"
            app:layout_constraintTop_toBottomOf="@id/password_tv"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:strokeWidth="1.0dip">
            <EditText
                android:id="@+id/password_et"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textPassword"
                android:hint="@string/default_hint"
                android:textSize="@dimen/_16"
                android:fontFamily="@font/english_regular"
                android:textColor="@color/black"
                style="@style/EditText_Theme"/>
        </com.google.android.material.card.MaterialCardView>
    <com.google.android.material.button.MaterialButton
        android:id="@+id/sign_in_btn"
        android:layout_width="0dp"
        android:layout_height="@dimen/button_hieght"
        android:text="@string/sign_in"
        style="@style/ButtonTextAppearance"
        android:layout_marginHorizontal="@dimen/default_horizontal_margin"
        android:layout_marginTop="40dp"
        app:layout_constraintTop_toBottomOf="@id/password_card"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/sign_up_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/new_to_fannak"
        style="@style/LabelsTextAppearance"
        app:layout_constraintEnd_toEndOf="@+id/sign_in_btn"
        app:layout_constraintStart_toStartOf="@+id/sign_in_btn"
        app:layout_constraintTop_toBottomOf="@+id/sign_in_btn" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/sign_up_btn"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sign_up_label" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/guest_btn"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="0dp"
        android:layout_height="@dimen/button_hieght"
        android:layout_marginHorizontal="@dimen/default_horizontal_margin"
        android:layout_marginTop="64dp"
        android:layout_marginBottom="40dp"
        android:text="@string/continue_as_a_guest"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sign_up_btn"
        app:strokeColor="@color/colorPrimary" />
</androidx.constraintlayout.widget.ConstraintLayout>