<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.LanguageActivity">
    <ImageView
        android:id="@+id/language_img"
        android:layout_width="0dp"
        android:layout_height="300dp"
        android:src="@drawable/language_img"
        android:paddingHorizontal="32dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
    <TextView
        android:id="@+id/language_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/set_your_language"
        android:textSize="@dimen/_32"
        android:fontFamily="@font/english_headline_semibold"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/language_img"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="70dp"
        app:layout_constraintBottom_toTopOf="@+id/next_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/language_label">

        <RadioButton
            android:id="@+id/english_rb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="17.0dip"
            android:button="@null"
            android:checked="true"
            android:drawableStart="@drawable/radio_drawable"
            android:drawablePadding="17.0dip"
            android:fontFamily="@font/english_medium"
            android:text="@string/english"
            android:textColor="@drawable/radio_text_color"
            android:textSize="@dimen/_16" />

        <RadioButton
            android:id="@+id/arabic_rb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="17.0dip"
            android:button="@null"
            android:fontFamily="@font/english_medium"
            android:drawableStart="@drawable/radio_drawable"
            android:drawablePadding="17.0dip"
            android:text="@string/arabic"
            android:textColor="@drawable/radio_text_color"
            android:textSize="@dimen/_16" />
    </RadioGroup>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/next_btn"
        android:layout_width="0dp"
        android:layout_height="@dimen/button_hieght"
        android:layout_marginHorizontal="@dimen/default_horizontal_margin"
        android:layout_marginBottom="40dp"
        android:text="@string/next"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>