<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.ContactUsActivity">

<include
    android:id="@+id/appbar"
    layout="@layout/appbar_simple"/>
    <TextView
        android:id="@+id/contact_us_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/english_medium"
        android:gravity="center"
        android:text="@string/contact_us"
        android:textColor="@color/gray_txt"
        android:textSize="@dimen/_15"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appbar" />

    <TextView
        android:id="@+id/customer_service_msg_tv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/georgia_bold"
        android:gravity="center"
        android:text="@string/customer_service_msg"
        android:textColor="@color/black"
        android:textSize="@dimen/_31"
        android:lineHeight="47dp"
        android:layout_marginTop="5dp"
        android:layout_marginHorizontal="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/contact_us_tv" />
    <TextView
        android:id="@+id/line"
        android:layout_width="32dp"
        android:layout_height="1dp"
        android:background="@color/black"
        android:layout_marginTop="18dp"
        app:layout_constraintTop_toBottomOf="@id/customer_service_msg_tv"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
    <TextView
        android:id="@+id/call_us_at_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/call_us_at"
        android:textSize="@dimen/_12"
        android:textColor="@color/gray_txt"
        android:fontFamily="@font/english_bold"
        android:textAllCaps="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="115dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/line"/>
    <TextView
        android:id="@+id/customer_service_num_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/customer_service_num"
        android:textColor="@color/black"
        android:fontFamily="@font/english_bold"
        android:textSize="@dimen/_19"
        android:layout_marginStart="20dp"
        android:layout_marginTop="3dp"
        app:layout_constraintTop_toBottomOf="@id/call_us_at_tv"
        app:layout_constraintStart_toStartOf="parent"/>
    <com.google.android.material.button.MaterialButton
        android:id="@+id/call_btn"
        android:layout_width="83dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/colorPrimary"
        android:text="@string/call"
        android:textColor="#ffffff"
        app:cornerRadius="17dp"
        app:icon="@drawable/ic_call"
        app:iconSize="20dp"
        android:textAllCaps="false"
        android:onClick="dial"
        android:fontFamily="@font/english_medium"
        android:gravity="end|center_vertical"
        android:foreground="?android:attr/actionBarItemBackground"
        android:focusable="true"
        android:clickable="true"
        android:paddingHorizontal="8dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/call_us_at_tv"/>
    <TextView
        android:id="@+id/follow_us_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/follow_us"
        android:fontFamily="@font/english_bold"
        android:textSize="@dimen/_12"
        android:textColor="@color/gray_txt"
        android:textAllCaps="true"
        android:layout_marginTop="40dp"
        android:layout_marginStart="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/customer_service_num_tv"/>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/facebook_btn"
        android:layout_width="0dp"
        android:layout_height="34dp"
        android:elevation="10dp"
        app:cardCornerRadius="17dp"
        app:cardBackgroundColor="#3D5E96"
        android:src="@drawable/ic_facebook"
        android:layout_marginStart="20dp"
        android:layout_marginTop="16dp"
        android:foreground="?android:attr/actionBarItemBackground"
        android:focusable="true"
        android:clickable="true"
        app:layout_constraintEnd_toStartOf="@id/twitter_btn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/follow_us_tv">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_centerInParent="true"
                android:src="@drawable/ic_facebook"/>
        </RelativeLayout>
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/twitter_btn"
        android:layout_width="0dp"
        android:layout_height="34dp"
        android:elevation="10dp"
        app:cardCornerRadius="17dp"
        app:cardBackgroundColor="#46ADE9"
        android:layout_marginHorizontal="13dp"
        android:layout_marginTop="16dp"
        android:foreground="?android:attr/actionBarItemBackground"
        android:focusable="true"
        android:clickable="true"
        app:layout_constraintEnd_toStartOf="@id/instagram_btn"
        app:layout_constraintStart_toEndOf="@id/facebook_btn"
        app:layout_constraintTop_toBottomOf="@id/follow_us_tv">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_centerInParent="true"
                android:src="@drawable/ic_twitter"/>
        </RelativeLayout>
    </com.google.android.material.card.MaterialCardView>
    <com.google.android.material.card.MaterialCardView
        android:id="@+id/instagram_btn"
        android:layout_width="0dp"
        android:layout_height="34dp"
        android:elevation="10dp"
        app:cardCornerRadius="17dp"
        app:cardBackgroundColor="#F9339E"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="20dp"
        android:foreground="?android:attr/actionBarItemBackground"
        android:focusable="true"
        android:clickable="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/twitter_btn"
        app:layout_constraintTop_toBottomOf="@id/follow_us_tv">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_centerInParent="true"
                android:src="@drawable/ic_instagram"/>
        </RelativeLayout>

    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>