<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.CategoryActivity">
    <include
        android:id="@+id/appbar"
        layout="@layout/appbar_simple"/>
    <TextView
        android:id="@+id/select_category_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/LabelsTextAppearance"
        android:text="@string/select_product_category_type"
        android:layout_marginTop="24dp"
        android:layout_marginStart="@dimen/default_horizontal_margin"
        app:layout_constraintTop_toBottomOf="@id/appbar"
        app:layout_constraintStart_toStartOf="parent"/>
    <com.google.android.material.card.MaterialCardView
        android:id="@+id/arts_category_card"
        android:layout_width="0dp"
        android:layout_height="@dimen/category_card_height"
        android:layout_marginTop="@dimen/category_margin_top"
        android:layout_marginStart="@dimen/default_horizontal_margin"
        android:layout_marginEnd="10dp"
        android:clickable="true"
        android:focusable="true"
        app:strokeWidth="1dp"
        android:background="?attr/selectableItemBackground"
        app:layout_constraintTop_toBottomOf="@id/select_category_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/handcrafts_category_card">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <ImageView
                android:id="@+id/arts_img"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/arts"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:scaleType="centerCrop"/>
            <TextView
                android:id="@+id/arts_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/arts"
                style="@style/CategoryTextAppearance"
                app:layout_constraintTop_toBottomOf="@id/arts_img"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent" />
            <ImageView
                android:id="@+id/arts_checked_img"
                android:layout_width="22dp"
                android:layout_height="22dp"
                android:src="@drawable/ic_check"
                android:visibility="gone"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_margin="8dp"/>


        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/handcrafts_category_card"
        android:layout_width="0dp"
        android:layout_height="@dimen/category_card_height"
        android:layout_marginTop="@dimen/category_margin_top"
        android:layout_marginEnd="@dimen/default_horizontal_margin"
        android:layout_marginStart="10dp"
        android:clickable="true"
        android:focusable="true"
        app:strokeWidth="1dp"
        android:background="?attr/selectableItemBackground"
        app:layout_constraintTop_toBottomOf="@id/select_category_label"
        app:layout_constraintStart_toEndOf="@id/arts_category_card"
        app:layout_constraintEnd_toEndOf="parent">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <ImageView
                android:id="@+id/handcrafts_img"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/handcrafts"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:scaleType="centerCrop"/>
            <TextView
                android:id="@+id/handcrafts_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/handcrafts"
                style="@style/CategoryTextAppearance"
                app:layout_constraintTop_toBottomOf="@id/handcrafts_img"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent" />

            <ImageView
                android:id="@+id/handcrafts_checked_img"
                android:layout_width="22dp"
                android:layout_height="22dp"
                android:src="@drawable/ic_check"
                android:visibility="gone"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_margin="8dp"/>


        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>

    <FrameLayout
        android:id="@+id/sub_category_container"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/arts_category_card"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>